--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.feizai.compost">
+    package="com.feizai.compose">
 
     <application
         android:allowBackup="true"
@@ -8,18 +8,19 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Compost">
+        android:theme="@style/Theme.Compose">
         <activity
-            android:name=".MainActivity"
+            android:name="com.feizai.compose.MainActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.Compost.NoActionBar">
+            android:theme="@style/Theme.Compose.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name="com.feizai.compose.RecyclerActivity"></activity>
     </application>
 
 </manifest>
